Update README & small fixes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,7 +65,7 @@
         <u>Front-End &amp; Design</u><br></br>
         Marina Kipourou<br></br>
         Christodoulos Antoniou<br></br>
-        Efstratios Bekstasiadis<br></br>
+        Efstratios Bektasiadis<br></br>
         <br></br><u>Back-End</u><br></br>
         Elena Konstantinidi<br></br>
         Mitrofanos Ntatidis<br></br>
